tests/base/valid/MultiLineComment_Valid_1.whiley
import * from whiley.lang.*


/*  Single Line Comment Test */
void ::main(System.Console sys):
	sys.out.println(5)