tests/base/invalid/Void_CompileFail_1.whiley
import whiley.lang.*:*

void f(void z):

